--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+      "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
