implemented search and scrape on controller

--- a/scrapers.config.json
+++ b/scrapers.config.json
@@ -1,7 +1,7 @@
 {
     "jumia": {
         "baseURI": "https://www.jumia.com.ng",
-        "searchSegment" : "/catalog/?q=",
+        "searchSegment" : ["/catalog/?q="],
         "parentDOM": "div[data-catalog] article.prd",
         "extractables" : [
             {
@@ -33,66 +33,56 @@
     },
 
     "kara": {
-        "baseURI": "https://www.jumia.com.ng",
-        "searchSegment" : "/catalog/?q=",
-        "parentDOM": "div[data-catalog] article.prd",
+        "baseURI": "https://www.kara.com.ng",
+        "searchSegment" : ["/catalogsearch/result/?q="],
+        "parentDOM": "ol.products li.product",
         "extractables" : [
             {
                 "variable": "link",
-                "source": "a.core",
+                "source": "div.product_image > a.photo",
                 "attribute": "href"
             },
             {
                 "variable": "img",
-                "source": "div.img-c > img.img",
-                "attribute": "data-src"
+                "source": "div.product_image > a > span.product-image-container > span.product-image-wrapper > img.product-image-photo",
+                "attribute": "src"
             },
             {
                 "variable": "name",
-                "source": "div.info > h3.name",
+                "source": "div.product.details.product-item-details > h2.product-item-name > a.product-item-link",
                 "attribute": "_text"
             },
             {
                 "variable": "price",
-                "source": "div.info div.prc",
-                "attribute": "_text"
-            },
-            {
-                "variable": "rating_text",
-                "source": "div.info div.stars._s",
+                "source": ".price-wrapper > span.price",
                 "attribute": "_text"
             }
         ]
     },
 
     "slot": {
-        "baseURI": "https://www.jumia.com.ng",
-        "searchSegment" : "/catalog/?q=",
-        "parentDOM": "div[data-catalog] article.prd",
+        "baseURI": "https://slot.ng",
+        "searchSegment" : ["/?s=", "&post_type=product"],
+        "parentDOM": "ul.products li.product",
         "extractables" : [
             {
                 "variable": "link",
-                "source": "a.core",
+                "source": "div.mf-product-thumbnail > a",
                 "attribute": "href"
             },
             {
                 "variable": "img",
-                "source": "div.img-c > img.img",
-                "attribute": "data-src"
+                "source": "div.mf-product-thumbnail > a > img",
+                "attribute": "src"
             },
             {
                 "variable": "name",
-                "source": "div.info > h3.name",
+                "source": "div.mf-product-details > div.mf-product-content > h2 > a",
                 "attribute": "_text"
             },
             {
                 "variable": "price",
-                "source": "div.info div.prc",
-                "attribute": "_text"
-            },
-            {
-                "variable": "rating_text",
-                "source": "div.info div.stars._s",
+                "source": "div.mf-product-details > div.mf-product-price-box > span.price span.amount",
                 "attribute": "_text"
             }
         ]
